add end points for getting and posting keywords

--- a/public/style.css
+++ b/public/style.css
@@ -1,9 +1,14 @@
-button {
+div.tweet {
     white-space:nowrap;
     width: 100%;
     position: absolute;
     -webkit-animation: myfirst 10s linear 2s ; /* Safari 4.0 - 8.0 */
     animation: myfirst 20s linear 2s ;
+}
+
+div.canvas {
+    height:100%;
+    width:100%;
 }
 
 /* Safari 4.0 - 8.0 */
