client side limiting

--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,13 @@
-a {
+a, u{
     text-decoration: none !important;
+    
+}
+
+a {
+    text-decoration: none;
+}
+a:link, a:visited {
+    color: inherit;
 }
 
 div.tweet {
